deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dunnu
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dunnu-frontend
  namespace: dunnu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dunnu-frontend
  template:
    metadata:
      labels:
        app: dunnu-frontend
    spec:
      containers:
      - name: dunnu-frontend
        image: iaminnocent/dunnu
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: dunnu-service
  namespace: dunnu
  annotations:
    prometheus.io/scrape: 'true'
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30043
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: dunnu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: dunnu
spec:
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  type: ClusterIP
