ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dunnu-ingress
  namespace: dunnu
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/load-balancer-name: my-app-eks
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:343296508304:certificate/8dbb7b2c-52bf-4083-b5d7-4e142e9591aa
    alb.ingress.kubernetes.io/group.name: purple
    alb.ingress.kubernetes.io/group.order: '2'
spec:
  ingressClassName: alb
  rules:
    - host: dunnu.codekami.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dunnu-service
                port:
                  number: 80
